--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
   "kill_keys": [SR-2025-WPTVF82LXW],
   "features": {
-    "auto_cookie_clear": true,
-    "ip_rotation": true,
-    "referral_tracking": true
+    "auto_cookie_clear": false,
+    "ip_rotation": false,
+    "referral_tracking": false
   },
   "message": "Your license has expired or was revoked. Please renew."
 }
