--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "kill_keys": ["SR-2025-WPTVF82LXW", "SR-2024-1234567890"],
+  "kill_keys": ["SR-2024-SFAQG01", "SR-2024-1234567890"],
   "message": "Your license has been revoked. Please contact support."
 }
